elk/lecture/k8sELK/logstash_4/logstash-http-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: logstash-http
  namespace: elk
spec:
  selector:
    app: logstash
  ports:  
    - protocol: "TCP"
      port: 9601
  type: ClusterIP
