elk/lecture/k8sELK/logstash_4/logstash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: logstash-ingress
spec:
  rules:
    - host: logstash.bitnamu.com
      http:
        paths:
        - backend:
            service:
              name: logstash-http
              port: 
                number: 9601
          path: /
          pathType: ImplementationSpecific
